docs/7.55/md/abencatchable_exception_glosry.md
---
title: "catchable_exception_glosry"
description: |
  catchable_exception_glosry - ABAP 7.55 language reference documentation
version: "7.55"
category: "error-handling"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencatchable_exception_glosry.htm"
abapFile: "abencatchable_exception_glosry.htm"
keywords: ["do", "try", "catch", "method", "class", "abencatchable", "exception", "glosry"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_glossary.htm) → 

catchable exception

[Exception](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenexception_glosry.htm "Glossary Entry") that can be treated in the program using the statements [TRY - CATCH - ENDTRY](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abaptry.htm) without causing a [runtime error](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenruntime_error_glosry.htm "Glossary Entry"). Catchable exceptions are based on [exception classes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenexception_class_glosry.htm "Glossary Entry") and are implemented by [exception objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenexception_object_glosry.htm "Glossary Entry"). A catchable exception is raised either by the [ABAP runtime environment](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_runtime_envir_glosry.htm "Glossary Entry") or by the statement [RAISE EXCEPTION](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapraise_exception.htm) in a program, or by the addition [THROW](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenconditional_expression_result.htm) in a [conditional expression](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenconditional_expression_glosry.htm "Glossary Entry"). Before the introduction of [class-based exceptions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenclass_based_exception_glosry.htm "Glossary Entry"), catchable exceptions could be self-defined only in the interfaces of [function modules](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenfunction_module_glosry.htm "Glossary Entry") and [methods](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenmethod_glosry.htm "Glossary Entry") and raised using [RAISE](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapraise_exception.htm). Predefined catchable exceptions occurred as [catchable runtime errors](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencatchable_runtime_error_glosry.htm "Glossary Entry"), now they are obsolete.

[→ More about](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_exceptions.htm)